@@ -7,6 +7,7 @@
 - New agent configuration parameter: WaitForProcess
 - Number of consecutive polls can be specified for "last value" threshold
 - Implemented "Clear DCI data" function
+- Windows console: added support for negative values on graphs
 - Java API introduced
 - Fixed issues: #238
 
